kubernetes/manifests/ingress-alb-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app-ingress
  namespace: py-app
  labels:
    app: py-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: eks-app-cluster-alb
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: py-app-service
            port:
              number: 4000
        pathType: Prefix
        path: /
